--- a/index.html
+++ b/index.html
@@ -255,8 +255,30 @@
 
         </section>
 
-        <section class="community">
+        <section class="community container">
+            <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+            <a href="#">Scopri di più sui nostri clienti</a>
 
+        </section>
+
+        <section class="costumer"></section>
+            <div class="flex-container-h flex-wrap customers-box">
+                <div class="flex-container-h flex-wrap side-customers">
+                    <div class="little-box box-1"></div>
+                    <div class="little-box box-2"></div>
+                    <div class="little-box box-3"></div>
+                    <div class="little-box box-4"></div>
+                </div>
+                <div class="central-customer">
+                    
+                </div>
+                <div class="flex-container-h flex-wrap side-customers">
+                    <div class="little-box box-5"></div>
+                    <div class="little-box box-6"></div>
+                    <div class="little-box box-7"></div>
+                    <div class="little-box box-8"></div>
+                </div>
+            </div>
         </section>
 
 
