--- a/index.html
+++ b/index.html
@@ -261,16 +261,16 @@
 
         </section>
 
-        <section class="costumer"></section>
-            <div class="flex-container-h flex-wrap customers-box">
-                <div class="flex-container-h flex-wrap side-customers">
+        <section class="customer row-gap-0">
+            <div class="flex-container-h flex-wrap customers-box row-gap-0 ">
+                <div class="flex-container-h flex-wrap side-customers row-gap-0">
                     <div class="little-box box-1"></div>
                     <div class="little-box box-2"></div>
                     <div class="little-box box-3"></div>
                     <div class="little-box box-4"></div>
                 </div>
                 <div class="central-customer">
-                    
+
                 </div>
                 <div class="flex-container-h flex-wrap side-customers">
                     <div class="little-box box-5"></div>
@@ -279,6 +279,18 @@
                     <div class="little-box box-8"></div>
                 </div>
             </div>
+            <div class="banner-orizzontale row-gap-0"></div>
+        </section>
+
+        <section class="faq container flex-container-v">
+            <h3>Domande frequenti</h3>
+            <div class="flex-container-v faq-box row-gap-0">
+                <div class="faq-questions">Quale è la differenza tra Dropbox Vusiness Standard e Dropbox Business Advanced?</div>
+                <div class="faq-questions">Quale è la differenza tra Dropbox Vusiness Standard e Dropbox Business Advanced?</div>
+                <div class="faq-questions">Quale è la differenza tra Dropbox Vusiness Standard e Dropbox Business Advanced?</div>
+                
+            </div>
+
         </section>
 
 
