--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900;8..144,1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -74,9 +77,9 @@
                     </div>
                     <div class="business-plan-fee box-container">&euro; 12.00/mese</div>
                     <div class="specification box-container">
-                        <div class="user-quantity"> 1 utente</div>
-                        <div class="memory-storage"> 5 TB di spazio di archiviazione sicuro</div>
-                        <div class="added-functions"> Funzioni di produttività premium e condivisione file semplice e
+                        <div class="list-icon user-quantity user"> 1 utente</div>
+                        <div class="list-icon memory-storage memory"> 5 TB di spazio di archiviazione sicuro</div>
+                        <div class="list-icon added-functions functions"> Funzioni di produttività premium e condivisione file semplice e
                             sicura</div>
                     </div>
                     <div class="day-of-trial box-container center"> <a href="" class="blue-button center">Prova gratis
@@ -84,14 +87,41 @@
                             giorni</a> </div>
                     <div class="purchase box-container">Oppure <a href="#">acquista ora</a></div>
                     <div class="highlights box-container">
-                        <div>punti salienti del piano</div>
-                        <div>Invia file fino a 100 GB con Dropbox Transfert</div>
-                        <div>Cartelle offline su dispositivi mobili</div>
-                        <div>punti salienti del piano</div>
-                        <div>Invia file fino a 100 GB con Dropbox Transfert</div>
-                        <div>Cartelle offline su dispositivi mobili</div>
+                        <div class="list-icon check">punti salienti del piano</div>
+                        <div class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</div>
+                        <div class="list-icon check">Cartelle offline su dispositivi mobili</div>
+                        <div class="list-icon check">punti salienti del piano</div>
+                        <div class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</div>
+                        <div class="list-icon check">Cartelle offline su dispositivi mobili</div>
                     </div>
 
+                </div>
+
+
+                <div class="business-plan-vertical-box flex-container-v flex-sb columns-div-x3">
+                    <div class="business-plan-title">Singolo</div>
+                    <div class="business-plan-name box-container">
+                        <h3>Professional</h3>
+                    </div>
+                    <div class="business-plan-fee box-container">&euro; 12.00/mese</div>
+                    <div class="specification box-container">
+                        <div class="list-icon user-quantity user"> 1 utente</div>
+                        <div class="list-icon memory-storage memory"> 5 TB di spazio di archiviazione sicuro</div>
+                        <div class="list-icon added-functions functions"> Funzioni di produttività premium e condivisione file semplice e
+                            sicura</div>
+                    </div>
+                    <div class="day-of-trial box-container center"> <a href="" class="blue-button center">Prova gratis
+                            per 30
+                            giorni</a> </div>
+                    <div class="purchase box-container">Oppure <a href="#">acquista ora</a></div>
+                    <div class="highlights box-container">
+                        <div class="list-icon check">punti salienti del piano</div>
+                        <div class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</div>
+                        <div class="list-icon check">Cartelle offline su dispositivi mobili</div>
+                        <div class="list-icon check">punti salienti del piano</div>
+                        <div class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</div>
+                        <div class="list-icon check">Cartelle offline su dispositivi mobili</div>
+                    </div>
                 </div>
 
                 <div class="business-plan-vertical-box flex-container-v flex-sb columns-div-x3">
@@ -101,9 +131,9 @@
                     </div>
                     <div class="business-plan-fee box-container">&euro; 12.00/mese</div>
                     <div class="specification box-container">
-                        <div class="user-quantity"> 1 utente</div>
-                        <div class="memory-storage"> 5 TB di spazio di archiviazione sicuro</div>
-                        <div class="added-functions"> Funzioni di produttività premium e condivisione file semplice e
+                        <div class="list-icon user-quantity user"> 1 utente</div>
+                        <div class="list-icon memory-storage memory"> 5 TB di spazio di archiviazione sicuro</div>
+                        <div class="list-icon added-functions functions"> Funzioni di produttività premium e condivisione file semplice e
                             sicura</div>
                     </div>
                     <div class="day-of-trial box-container center"> <a href="" class="blue-button center">Prova gratis
@@ -111,41 +141,13 @@
                             giorni</a> </div>
                     <div class="purchase box-container">Oppure <a href="#">acquista ora</a></div>
                     <div class="highlights box-container">
-                        <div>punti salienti del piano</div>
-                        <div>Invia file fino a 100 GB con Dropbox Transfert</div>
-                        <div>Cartelle offline su dispositivi mobili</div>
-                        <div>punti salienti del piano</div>
-                        <div>Invia file fino a 100 GB con Dropbox Transfert</div>
-                        <div>Cartelle offline su dispositivi mobili</div>
+                        <div class="list-icon check">punti salienti del piano</div>
+                        <div class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</div>
+                        <div class="list-icon check">Cartelle offline su dispositivi mobili</div>
+                        <div class="list-icon check">punti salienti del piano</div>
+                        <div class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</div>
+                        <div class="list-icon check">Cartelle offline su dispositivi mobili</div>
                     </div>
-
-                </div>
-
-                <div class="business-plan-vertical-box flex-container-v flex-sb columns-div-x3">
-                    <div class="business-plan-title">Singolo</div>
-                    <div class="business-plan-name box-container">
-                        <h3>Professional</h3>
-                    </div>
-                    <div class="business-plan-fee box-container">&euro; 12.00/mese</div>
-                    <div class="specification box-container">
-                        <div class="user-quantity"> 1 utente</div>
-                        <div class="memory-storage"> 5 TB di spazio di archiviazione sicuro</div>
-                        <div class="added-functions"> Funzioni di produttività premium e condivisione file semplice e
-                            sicura</div>
-                    </div>
-                    <div class="day-of-trial box-container center"> <a href="" class="blue-button center">Prova gratis
-                            per 30
-                            giorni</a> </div>
-                    <div class="purchase box-container">Oppure <a href="#">acquista ora</a></div>
-                    <div class="highlights box-container">
-                        <div>punti salienti del piano</div>
-                        <div>Invia file fino a 100 GB con Dropbox Transfert</div>
-                        <div>Cartelle offline su dispositivi mobili</div>
-                        <div>punti salienti del piano</div>
-                        <div>Invia file fino a 100 GB con Dropbox Transfert</div>
-                        <div>Cartelle offline su dispositivi mobili</div>
-                    </div>
-
                 </div>
 
                 <div class="business-plan-horizontal-box flex-container-v columns-div-x1">
@@ -296,6 +298,63 @@
 
 
     </main>
+
+    <footer>
+        <div class="footer-list container flex-container-h">
+            <div class="link-list flex-container-v columns-div-x5">
+                <h4>Dropbox</h4>
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+            <div class="link-list flex-container-v columns-div-x5">
+                <h4>Dropbox</h4>
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>            
+            <div class="link-list flex-container-v columns-div-x5">
+                <h4>Dropbox</h4>
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+            <div class="link-list flex-container-v columns-div-x5">
+                <h4>Dropbox</h4>
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+            <div class="link-list flex-container-v columns-div-x5">
+                <h4>Dropbox</h4>
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+
+        </div>
+        <div class="lingua container">Italiano</div>
+    </footer>
 </body>
 
 </html>
