--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900;8..144,1000&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900;8..144,1000&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -79,7 +81,8 @@
                     <div class="specification box-container">
                         <div class="list-icon user-quantity user"> 1 utente</div>
                         <div class="list-icon memory-storage memory"> 5 TB di spazio di archiviazione sicuro</div>
-                        <div class="list-icon added-functions functions"> Funzioni di produttività premium e condivisione file semplice e
+                        <div class="list-icon added-functions functions"> Funzioni di produttività premium e
+                            condivisione file semplice e
                             sicura</div>
                     </div>
                     <div class="day-of-trial box-container center"> <a href="" class="blue-button center">Prova gratis
@@ -107,7 +110,8 @@
                     <div class="specification box-container">
                         <div class="list-icon user-quantity user"> 1 utente</div>
                         <div class="list-icon memory-storage memory"> 5 TB di spazio di archiviazione sicuro</div>
-                        <div class="list-icon added-functions functions"> Funzioni di produttività premium e condivisione file semplice e
+                        <div class="list-icon added-functions functions"> Funzioni di produttività premium e
+                            condivisione file semplice e
                             sicura</div>
                     </div>
                     <div class="day-of-trial box-container center"> <a href="" class="blue-button center">Prova gratis
@@ -133,7 +137,8 @@
                     <div class="specification box-container">
                         <div class="list-icon user-quantity user"> 1 utente</div>
                         <div class="list-icon memory-storage memory"> 5 TB di spazio di archiviazione sicuro</div>
-                        <div class="list-icon added-functions functions"> Funzioni di produttività premium e condivisione file semplice e
+                        <div class="list-icon added-functions functions"> Funzioni di produttività premium e
+                            condivisione file semplice e
                             sicura</div>
                     </div>
                     <div class="day-of-trial box-container center"> <a href="" class="blue-button center">Prova gratis
@@ -266,31 +271,56 @@
         <section class="customer row-gap-0">
             <div class="flex-container-h flex-wrap customers-box row-gap-0 ">
                 <div class="flex-container-h flex-wrap side-customers row-gap-0">
-                    <div class="little-box box-1"></div>
-                    <div class="little-box box-2"></div>
-                    <div class="little-box box-3"></div>
-                    <div class="little-box box-4"></div>
+                    <div class="little-box box-1"><img src="../htmlcss-dropbox/img/designit.svg" alt=""></div>
+                    <div class="little-box box-2"><img src="../htmlcss-dropbox/img/arizona_state_university.svg" alt="">
+                    </div>
+                    <div class="little-box box-3"><img src="../htmlcss-dropbox/img/university_of_florida.svg" alt="">
+                    </div>
+                    <div class="little-box box-4"><img src="../htmlcss-dropbox/img/topps.svg" alt=""></div>
                 </div>
                 <div class="central-customer">
+                    <div class="container-80">
+                        <div class="central-customer-logo">
+                            <img src="../htmlcss-dropbox/img/designit.svg" alt="">
+                        </div>
+                        <div class="line">
+                            <hr>
+                        </div>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo sunt eligendi saepe expedita
+                            ipsam doloribus, eum quae? Obcaecati fugiat illo praesentium porro minima aliquid. Quidem
+                            hic totam quia ratione exercitationem.</p>
+                        <div>Morten Thomsen, Global IT lead</div>
 
+                    </div>
                 </div>
                 <div class="flex-container-h flex-wrap side-customers">
-                    <div class="little-box box-5"></div>
-                    <div class="little-box box-6"></div>
-                    <div class="little-box box-7"></div>
-                    <div class="little-box box-8"></div>
+                    <div class="little-box box-5"><img src="../htmlcss-dropbox/img/world_bicycle_relief.svg" alt="">
+                    </div>
+                    <div class="little-box box-6"><img src="../htmlcss-dropbox/img/hearst_corp.svg" alt=""></div>
+                    <div class="little-box box-7"><img src="../htmlcss-dropbox/img/lonely_planet.svg" alt=""></div>
+                    <div class="little-box box-8"><img src="../htmlcss-dropbox/img/clear_channel.svg" alt=""></div>
                 </div>
             </div>
-            <div class="banner-orizzontale row-gap-0"></div>
+            <div class="banner-orizzontale row-gap-0 flex-container-h flex-align-center ">
+                <div class="container flex-container-h flex-align-center">
+                    <div class="high-attention columns-div-x2"> <h2>Porta Dropbox Business nella tua azienda.</h2> </div>
+                    <div class="columns-div-x2"> <a href="#">inizia la tua prova gratuita</a> </div>
+                </div>
+            </div>
+
+            </div>
         </section>
 
-        <section class="faq container flex-container-v">
+        <section class="faq container flex-container-v ">
             <h3>Domande frequenti</h3>
             <div class="flex-container-v faq-box row-gap-0">
-                <div class="faq-questions">Quale è la differenza tra Dropbox Vusiness Standard e Dropbox Business Advanced?</div>
-                <div class="faq-questions">Quale è la differenza tra Dropbox Vusiness Standard e Dropbox Business Advanced?</div>
-                <div class="faq-questions">Quale è la differenza tra Dropbox Vusiness Standard e Dropbox Business Advanced?</div>
-                
+                <div class="faq-questions">Quale è la differenza tra Dropbox Vusiness Standard e Dropbox Business
+                    Advanced?</div>
+                <div class="faq-questions">Quale è la differenza tra Dropbox Vusiness Standard e Dropbox Business
+                    Advanced?</div>
+                <div class="faq-questions">Quale è la differenza tra Dropbox Vusiness Standard e Dropbox Business
+                    Advanced?</div>
+
             </div>
 
         </section>
@@ -320,7 +350,7 @@
                     <li>Sicurezza</li>
                     <li>Funzioni</li>
                 </ul>
-            </div>            
+            </div>
             <div class="link-list flex-container-v columns-div-x5">
                 <h4>Dropbox</h4>
                 <ul>
