--- a/index.html
+++ b/index.html
@@ -71,118 +71,117 @@
 
 
             <div class="business-plan-list flex-container-h flex-wrap">
+                
 
                 <div class="business-plan-vertical-box flex-container-v flex-sb columns-div-x3">
-                    <div class="business-plan-title">Singolo</div>
+                    <div class="business-plan-title flex-container-h flex-align-center flex-center list-icon user">Singolo</div>
                     <div class="business-plan-name box-container">
                         <h3>Professional</h3>
                     </div>
                     <div class="business-plan-fee box-container">&euro; 12.00/mese</div>
-                    <div class="specification box-container">
-                        <div class="list-icon user-quantity user"> 1 utente</div>
-                        <div class="list-icon memory-storage memory"> 5 TB di spazio di archiviazione sicuro</div>
-                        <div class="list-icon added-functions functions"> Funzioni di produttività premium e
-                            condivisione file semplice e
-                            sicura</div>
-                    </div>
+                    <ul class="specification box-container">
+                        <li class="list-icon user-quantity user"> 1 utente</li>
+                        <li class="list-icon memory-storage memory"> 5 TB di spazio di archiviazione sicuro</li>
+                        <li class="list-icon added-functions functions"> Funzioni di produttività premium e
+                            conliisione file semplice e
+                            sicura</li>
+                    </ul>
                     <div class="day-of-trial box-container center"> <a href="" class="blue-button center">Prova gratis
                             per 30
                             giorni</a> </div>
                     <div class="purchase box-container">Oppure <a href="#">acquista ora</a></div>
-                    <div class="highlights box-container">
-                        <div class="list-icon check">punti salienti del piano</div>
-                        <div class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</div>
-                        <div class="list-icon check">Cartelle offline su dispositivi mobili</div>
-                        <div class="list-icon check">punti salienti del piano</div>
-                        <div class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</div>
-                        <div class="list-icon check">Cartelle offline su dispositivi mobili</div>
-                    </div>
-
+                    <div class="strong box-container">Punti salienti del piano</div>
+                    <ul class="highlights box-container">
+                        <li class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</li>
+                        <li class="list-icon check">Cartelle offline su dispositivi mobili</li>
+                        <li class="list-icon check">punti salienti del piano</li>
+                        <li class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</li>
+                        <li class="list-icon check">Cartelle offline su dispositivi mobili</li>
+                    </ul>
                 </div>
 
 
                 <div class="business-plan-vertical-box flex-container-v flex-sb columns-div-x3">
-                    <div class="business-plan-title">Singolo</div>
+                    <div class="business-plan-title flex-container-h flex-align-center flex-center list-icon user">Singolo</div>
                     <div class="business-plan-name box-container">
                         <h3>Professional</h3>
                     </div>
                     <div class="business-plan-fee box-container">&euro; 12.00/mese</div>
-                    <div class="specification box-container">
-                        <div class="list-icon user-quantity user"> 1 utente</div>
-                        <div class="list-icon memory-storage memory"> 5 TB di spazio di archiviazione sicuro</div>
-                        <div class="list-icon added-functions functions"> Funzioni di produttività premium e
-                            condivisione file semplice e
-                            sicura</div>
-                    </div>
+                    <ul class="specification box-container">
+                        <li class="list-icon user-quantity user"> 1 utente</li>
+                        <li class="list-icon memory-storage memory"> 5 TB di spazio di archiviazione sicuro</li>
+                        <li class="list-icon added-functions functions"> Funzioni di produttività premium e
+                            conliisione file semplice e
+                            sicura</li>
+                    </ul>
                     <div class="day-of-trial box-container center"> <a href="" class="blue-button center">Prova gratis
                             per 30
                             giorni</a> </div>
                     <div class="purchase box-container">Oppure <a href="#">acquista ora</a></div>
-                    <div class="highlights box-container">
-                        <div class="list-icon check">punti salienti del piano</div>
-                        <div class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</div>
-                        <div class="list-icon check">Cartelle offline su dispositivi mobili</div>
-                        <div class="list-icon check">punti salienti del piano</div>
-                        <div class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</div>
-                        <div class="list-icon check">Cartelle offline su dispositivi mobili</div>
-                    </div>
+                    <div class="strong box-container">Punti salienti del piano</div>
+                    <ul class="highlights box-container">
+                        <li class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</li>
+                        <li class="list-icon check">Cartelle offline su dispositivi mobili</li>
+                        <li class="list-icon check">punti salienti del piano</li>
+                        <li class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</li>
+                        <li class="list-icon check">Cartelle offline su dispositivi mobili</li>
+                    </ul>
                 </div>
 
                 <div class="business-plan-vertical-box flex-container-v flex-sb columns-div-x3">
-                    <div class="business-plan-title">Singolo</div>
+                    <div class="business-plan-title flex-container-h flex-align-center flex-center list-icon user">Singolo</div>
                     <div class="business-plan-name box-container">
                         <h3>Professional</h3>
                     </div>
                     <div class="business-plan-fee box-container">&euro; 12.00/mese</div>
-                    <div class="specification box-container">
-                        <div class="list-icon user-quantity user"> 1 utente</div>
-                        <div class="list-icon memory-storage memory"> 5 TB di spazio di archiviazione sicuro</div>
-                        <div class="list-icon added-functions functions"> Funzioni di produttività premium e
-                            condivisione file semplice e
-                            sicura</div>
-                    </div>
+                    <ul class="specification box-container">
+                        <li class="list-icon user-quantity user"> 1 utente</li>
+                        <li class="list-icon memory-storage memory"> 5 TB di spazio di archiviazione sicuro</li>
+                        <li class="list-icon added-functions functions"> Funzioni di produttività premium e
+                            conliisione file semplice e
+                            sicura</li>
+                    </ul>
                     <div class="day-of-trial box-container center"> <a href="" class="blue-button center">Prova gratis
                             per 30
                             giorni</a> </div>
                     <div class="purchase box-container">Oppure <a href="#">acquista ora</a></div>
-                    <div class="highlights box-container">
-                        <div class="list-icon check">punti salienti del piano</div>
-                        <div class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</div>
-                        <div class="list-icon check">Cartelle offline su dispositivi mobili</div>
-                        <div class="list-icon check">punti salienti del piano</div>
-                        <div class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</div>
-                        <div class="list-icon check">Cartelle offline su dispositivi mobili</div>
-                    </div>
+                    <div class="strong box-container">Punti salienti del piano</div>
+                    <ul class="highlights box-container">
+                        <li class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</li>
+                        <li class="list-icon check">Cartelle offline su dispositivi mobili</li>
+                        <li class="list-icon check">punti salienti del piano</li>
+                        <li class="list-icon check">Invia file fino a 100 GB con Dropbox Transfert</li>
+                        <li class="list-icon check">Cartelle offline su dispositivi mobili</li>
+                    </ul>
                 </div>
 
-                <div class="business-plan-horizontal-box flex-container-v columns-div-x1">
-                    <div class="business-plan-title">
-                        Team
-                    </div>
-                    <div class="content flex-container-h box-container">
-                        <div class="columns-div-x2 flex-container-v">
+
+
+                <div class="business-plan-vertical-box flex-container-v flex-sb columns-div-x1">
+                    <div class="business-plan-title list-icon user">Team</div>
+                    <div class="content flex-container-h">
+                        <div class="columns-div-2on3 flex-container-v flex-grow-2">
                             <div class="business-plan-name">
                                 <h3>Enterprise</h3>
                             </div>
-                            <div class="get-in-contact">Contatta l'ufficio vendite per i prezzi</div>
+                            <div class="strong">Contatta l'ufficio vendite per i prezzi</div>
                             <div class="Enterprise-informations">Soluzioni personalizzate e supporto su misura
                                 per aiutare i professionisti IT nella gestione su qualsiasi scala</div>
                         </div>
-                        <div class="day-of-trial flex-container-h columns-div-x2">
+                        <div class="day-of-trial flex-container-v columns-div-1on3 flex-start align">
                             <a href="" class="blue-button">Prova gratis per 30 giorni</a>
                         </div>
                     </div>
-
                 </div>
 
             </div>
         </section>
 
         <section class="drop-box-partner container flex-container-h">
-            <div class="columns-div-x2">
+            <div class="columns-div-2on3">
                 <img src="../htmlcss-dropbox/img/partner.png" alt="">
             </div>
-            <div class="flex-container-v columns-div-x2">
+            <div class="flex-container-v columns-div-1on3">
                 <h3>Entra in contatto con un partner Dropbox</h3>
                 <div> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam magni neque ut natus, sed
                     deserunt corrupti ad soluta commodi recusandae dicta, quia nostrum? Odio enim asperiores quibusdam
@@ -304,7 +303,7 @@
             <div class="banner-orizzontale row-gap-0 flex-container-h flex-align-center ">
                 <div class="container flex-container-h flex-align-center">
                     <div class="high-attention columns-div-x2"> <h2>Porta Dropbox Business nella tua azienda.</h2> </div>
-                    <div class="columns-div-x2"> <a href="#">inizia la tua prova gratuita</a> </div>
+                    <div class="columns-div-x2"> <a href="#" class="white-button">inizia la tua prova gratuita</a> </div>
                 </div>
             </div>
 
@@ -314,12 +313,18 @@
         <section class="faq container flex-container-v ">
             <h3>Domande frequenti</h3>
             <div class="flex-container-v faq-box row-gap-0">
-                <div class="faq-questions">Quale è la differenza tra Dropbox Vusiness Standard e Dropbox Business
-                    Advanced?</div>
-                <div class="faq-questions">Quale è la differenza tra Dropbox Vusiness Standard e Dropbox Business
-                    Advanced?</div>
-                <div class="faq-questions">Quale è la differenza tra Dropbox Vusiness Standard e Dropbox Business
-                    Advanced?</div>
+                <div class="faq-question flex-container-h flex-align-center strong flex-sb">
+                    <div>Quale è la differenza tra Dropbox Vusiness Standard e Dropbox Business Advanced?</div>
+                    <div class="arrow-expand"><i class="fa-solid fa-angle-down"></i></div>                   
+                </div>
+                <div class="faq-question flex-container-h flex-align-center strong flex-sb">
+                    <div>Quale è la differenza tra Dropbox Vusiness Standard e Dropbox Business Advanced?</div>
+                    <div class="arrow-expand"><i class="fa-solid fa-angle-down"></i></div>                   
+                </div>
+                <div class="faq-question flex-container-h flex-align-center strong flex-sb">
+                    <div>Quale è la differenza tra Dropbox Vusiness Standard e Dropbox Business Advanced?</div>
+                    <div class="arrow-expand"><i class="fa-solid fa-angle-down"></i></div>                   
+                </div>
 
             </div>
 
@@ -383,7 +388,14 @@
             </div>
 
         </div>
-        <div class="lingua container">Italiano</div>
+        <div class="Footer-lingua container">    
+            <div class="container">         
+                <hr>
+            </div>     
+            <div class="lingua container">         
+                <i class="fa-solid fa-earth-americas"></i> Italiano <i class="fa-solid fa-sort-up"></i>
+            </div>
+        </div>
     </footer>
 </body>
 
