--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
             </div>
             <div class="banner-orizzontale row-gap-0 flex-container-h flex-align-center ">
                 <div class="container flex-container-h flex-align-center">
-                    <div class="high-attention columns-div-x2"> <h2>Porta Dropbox Business nella tua azienda.</h2> </div>
-                    <div class="columns-div-x2"> <a href="#" class="white-button">inizia la tua prova gratuita</a> </div>
+                    <div class="high-attention columns-div-2on3"> <h2>Porta Dropbox Business nella tua azienda.</h2> </div>
+                    <div class="columns-div-1on3"> <a href="#" class="white-button">inizia la tua prova gratuita</a> </div>
                 </div>
             </div>
 
